Ora_Bash_NoSQL_Scripts/iptables.conf
# Firewall configuration for Oracle NoSQL System
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp --dport 22 -j ACCEPT

# nosql rule set
-A INPUT -p tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp --dport 5001 -j ACCEPT
-A INPUT -p tcp --dport 5010:5020 -j ACCEPT
-A INPUT -p tcp --dport 5021:5040 -j ACCEPT

# UDP not in use
#-A INPUT -p udp --dport 5000 -j ACCEPT
#-A INPUT -p udp --dport 5001 -j ACCEPT
#-A INPUT -p udp --dport 5010:5020 -j ACCEPT
#-A INPUT -p udp --dport 5021:5040 -j ACCEPT


#Logging for debuging nosql ports
#-N LOGGING
#-A INPUT -j LOGGING
#-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Drop:: " --log-level 4
#-A LOGGING -j DROP

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT

-------------------------------
# Firewall configuration written by system-config-firewall
# Manual customization of this file is not recommended.
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5000 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5001 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5010:5020 -j ACCEPT
-A INPUT -m state --state NEW -m tcp -p tcp --dport 5021:5040 -j ACCEPT
-A INPUT -p udp --dport 5000 -j ACCEPT
-A INPUT -p udp --dport 5001 -j ACCEPT
-A INPUT -p udp --dport 5010:5020 -j ACCEPT
-A INPUT -p udp --dport 5021:5040 -j ACCEPT
-N LOGGING
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Drop:: " --log-level 4
-A LOGGING -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
